--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ecom</title>
+  <title>Airbnb</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,5 +10,8 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="https://js.stripe.com/v3/"></script>
+
 </body>
 </html>
